# ypc_telegram_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.sh  compose.yaml  pyproject.toml  requirements.txt  telezombie.example.yaml
bot/: __main__.py  _cmd.py  _db.py  _main.py  _models.py  db.py
migrations/: env.py
migrations/versions/: 89ada066a9e9_init.py  c8c8e721719a_add_story.py
