[tool.poetry]
name = "ypc-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Wei-Cheng Pan <legnaleurc@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^5.2"
SQLAlchemy = "^1.3.12"
"wcpan.telegram" = "^0.3.0.dev7"
tornado = "^4"
alembic = "^1.3.2"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
